# llm-financial-pdf-agent

./: BLOG.md  README.md  pyproject.toml
src/: main.py
src/llm_lingua_pydantic_ai/: __init__.py  agent.py  retriever.py
