[project]
name = "llm-lingua-pydantic-ai"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rajatnigam", email = "rajatnigam89@gmail.com" }
]
dependencies = [
    "pypdf>=5.7.0",
    "pydantic-ai>=0.4.2",
    "black>=25.1.0",
    "isort>=6.0.1",
    "llmlingua>=0.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_lingua_pydantic_ai"]
